# ropod_sim_model

./: .gitignore  CMakeLists.txt  package.xml
launch/simulator/: .gitignore  gazebo_simulator.launch  gym_gazebo_simulator.launch  ropod_origin_gazebo_simulator.launch
maps/tue_hallway_RLtoAL/: map.pgm  map.scad  map.urdf  map.xcf  map.yaml
simulator/: .gitignore
simulator/gazebo_plugins/animatedBox/: .gitignore  animated_box.cc
simulator/gazebo_plugins/animatedCylinder/: animated_cylinder.cc
simulator/gazebo_plugins/animatedCylinder2/: .gitignore  animated_cylinder2.cc  readme
simulator/gazebo_plugins/laser/include/: custom_laser_plugin (copy).h  custom_laser_plugin.h
simulator/gazebo_plugins/laser/src/: Custom_Laser_Plugin.cc  custom_laser_plugin (copy).cc
simulator/gazebo_plugins/odometry/src/: Odometry_Plugin.cc
simulator/models/media/materials/scripts/: base.material  orange.material  torso.material
simulator/models/media/materials/textures/: make_maze.m
simulator/models/media/meshes/: base.dae  headnew.dae  heightmap.stl  map_hallway_RLtoAL.stl
simulator/models/mobidik/: mobidik.sdf  model.config
simulator/models/pico/: model.config  pico.sdf
simulator/models/ropod/: model.config  ropod.sdf
simulator/models/ropod_doubleLaser/: model.config  ropod_doubleLaser.sdf
simulator/models/ropod_mobidik/: model.config  ropod_mobidik.sdf
simulator/models/ropod_tue_2/: model.config  ropod_tue_2.sdf
simulator/models/tue_map/: model.config  tue_map.sdf
urdf/: asus_camera_ropod.urdf  ropod.urdf
world/: gym_empty.world  ropod.world  ropod_doubleLaser.world  ropod_movingObjects.world  ropod_movingObjects_doubleLaser.world  ropod_tue_2.world
